# kivixa

./: .flutter-plugins-dependencies  .gitattributes  .gitignore  .gitmodules  .metadata  ARCHITECTURE.md  BEZIER_CURVES.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  EXAMPLES.md  FEATURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KIVIXA_README.md  LICENSE.md  PDFRX_PRODUCTION_NOTES.md  PDF_VIEWER_GUIDE.md  PERFORMANCE_GUIDE.md  PLAN  QUICK_START.md  README.md  RELEASE_NOTES.md  SECURITY.md  VERSION  analysis_options.yaml  build.dart  config.yml  eslint.config.js  flutter_rust_bridge.yaml  flutter_rust_bridge_audio.yaml  flutter_rust_bridge_math.yaml  index.html  keystore.p12  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pubspec.yaml  (+2 more)
.dart_tool/: package_config.json  package_graph.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  changelog-config.json  codecov.yml
android/: build.gradle.kts  gradle.properties  key.properties.template
assets/: paper.html
core/: README.md  tsconfig.json
creation/: InfiniteCanvasCreationService.kt
data/: README.md  bootstrap.ts  cli.ts  package.json  schema.sql  sqlite_schema.sql
database/: KivixaDatabase.kt
docs/: ADVANCED_GESTURE_HANDLING.md  ADVANCED_OPTIMIZATION_FEATURES.md  AI_MCP_GUIDE.md  ARCHITECTURE_DIAGRAM.md  ARCHIVE_SYSTEM.md  AUDIO_INTELLIGENCE_TESTING.md  AdaptiveIcons.md  BEZIER_CURVES.md  BLEND_MODES_SERIALIZATION.md  BROWSER_TESTING.md  BRUSH_ENGINE_IMPLEMENTATION.md  BUG_FIXES_ERASER_AND_NULL_POINTER.md  CANVAS_CLIPPING_SYSTEM.md  CANVAS_MANIPULATION.md  CHANGELOG.md  CLOCK_TESTING_GUIDE.md  COMMUNITY_FILES_AND_HOMEPAGE_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPRESSION_AND_OPTIMIZATION.md  COMPRESSION_IMPLEMENTATION_SUMMARY.md  DEBUGGING.md  DEPRECATION_FIXES_AND_NEW_FEATURES.md  DEVELOPER_GUIDE.md  DISPLAY_EXPORT_IMPLEMENTATION_SUMMARY.md  DISPLAY_EXPORT_SEPARATION.md  DOCUMENTATION.md  EXAMPLES.md  EXPORT_AND_PDF_STATUS.md  FEATURE_INTEGRATION_SUMMARY.md  FEATURE_SUMMARY.md  FILE_BROWSER_COMPLETION_SUMMARY.md  FILE_ORGANIZATION_SYSTEM.md  FIXES_SUMMARY.md  GITHUB_ACTIONS.md  HIGH_RESOLUTION_EXPORT_AND_PDF.md  IMPLEMENTATION.md  INDEX.md  INFINITE_CANVAS_IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  KNOWLEDGE_GRAPH_TESTING.md  (+36 more)
domain/: Comment.kt  DecodedStrokeData.kt  Document.kt  EdgeOffset.kt  EditorState.kt  Favorite.kt  Job.kt  Layer.kt  Link.kt  MinimapExtents.kt  MinimapTile.kt  Outline.kt  Page.kt  PageFlowMode.kt  PointF.kt  Rect.kt  Result.kt  Setting.kt  SplitLayoutState.kt  Stroke.kt  StrokeChunk.kt  Template.kt  ToolPreset.kt  Viewport.kt
dummy/: dummy.R  dummy.css  dummy.go  dummy.html  dummy.java  dummy.js  dummy.m  dummy.php  dummy.rs  dummy.sql  dummy.swift  dummy.ts
eraser/: EraserModeManager.kt
favorites/: FavoritesService.kt
filestore/: FileStore.kt
gestures/: GesturesSettings.kt
images/: ImagesService.kt
layers/: LayersService.kt
lib/: ffi_bindings.dart  main.dart  objectbox-model.json  objectbox.g.dart  providers.dart  theme.dart
linux/: CMakeLists.txt
longpress/: LongPressActions.kt
md_files/: KNOWLEDGE_GRAPH_TESTING.md
metadata/: com.a990aa.kivixa.yml
multiinstance/: MultiInstanceGuard.kt
native/: Cargo.toml
native/database_ffi/: database_ffi.h
native/free_paper_movement/: free_paper_movement.cpp  free_paper_movement.h
native/gestures/: gestures_recognition.cpp  gestures_recognition.h
native/images/: images_ffi.cpp  images_ffi.h
native/infinite_canvas/: infinite_canvas.cpp  infinite_canvas.h
native/pdf/: pdf_ffi.cpp  pdf_ffi.h
native/replay_engine/: replay_engine.cpp  replay_engine.h
native/shapes/: shapes_recognition.cpp  shapes_recognition.h
native/src/: api.rs  clustering.rs  embeddings.rs  frb_generated.rs  graph.rs  inference.rs  lib.rs  mcp.rs  quadtree.rs  streaming.rs
native/stroke_engine/: eraser_algorithms.cpp  eraser_algorithms.h  ffi_stroke_engine.cpp  pressure_interpolation.cpp  pressure_interpolation.h  stroke_engine.cpp  stroke_engine.h
native/thumbnail_service/: color_conversion.cpp  color_conversion.h  ffi_color_conversion.cpp  thumbnail_service.cpp  thumbnail_service.h
native_audio/: Cargo.toml  frb_generated.h
native_audio/src/: api.rs  audio_buffer.rs  frb_generated.rs  lib.rs  phonemizer.rs  stt.rs  tests.rs  tts.rs  vad.rs
native_math/: Cargo.toml  frb_generated.h
native_math/src/: api.rs  basic.rs  calculus.rs  complex.rs  discrete.rs  frb_generated.rs  graphing.rs  lib.rs  matrix.rs  statistics.rs  tests.rs  units.rs
navigation/: FastNavigationService.kt
outlines/: OutlineCommentAdminService.kt  ScannedPageOutlineService.kt
pageaddition/: PageAdditionStateMachine.kt
pageflow/: PageFlowManager.kt
palettes/: ColorPalettesService.kt
pdf/: PdfAnnotationService.kt
performance_benchmarks/: README.md  benchmark_utils.dart  startup_benchmark_test.dart
python_services/: README.md  main.py
repo/: entry.json  index-v1.json  index-v2.json  index.html  index.xml
repository/: Repository.kt  mappers.kt
resources/: styles.qss
rust_builder/: Cargo.toml  README.md  pubspec.yaml
rust_builder/android/: build.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/cmake/: cargokit.cmake
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/src/: lib.rs
rust_builder/windows/: CMakeLists.txt
scripts/: build-f-droid.sh  build_audio.ps1  build_math.ps1  build_native.ps1  bump_version.dart  fix_deprecations.ps1  publish_release.ps1  publish_release_local.ps1  release.ps1  release_gh.ps1  run_codegen.ps1  rust_checks.ps1
settings/: SettingsManager.kt
shaders/: pencil.frag  texture_brush.frag
shapes/: ShapesConfigService.kt
splitscreen/: SplitScreenPersistenceService.kt
src/: main.py
strokes/: ReplayEngine.kt  StrokeAppendManager.kt
templates/: TemplatesService.kt
test/: advanced_markdown_editor_test.dart  ai_prompt_autofill_test.dart  android_back_handler_test.dart  android_fixes_test.dart  app_data_clear_test.dart  app_lock_test.dart  asset_cleanup_regression_test.dart  (+109 more)
(+938 files in other folders)
