[package]
name = "kivixa_native"
version = "1.0.0"
edition = "2025"
description = "Native Rust engine for Kivixa AI features"
authors = ["Kivixa Team"]

[lib]
name = "kivixa_native"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge for Dart interop
flutter_rust_bridge = "2.0.0"

# Error handling
anyhow = "1.0"

# Llama.cpp bindings for Phi-4 inference
llama-cpp-2 = "0.1.79"

# Force-directed graph simulation for knowledge graph
fdg-sim = "0.9"

# Serialization for graph data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Thread-safe primitives
parking_lot = "0.12"

# Async runtime (for streaming responses)
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific: Use Vulkan for GPU acceleration
llama-cpp-sys-2 = { version = "0.1.79", features = ["vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows: CUDA for NVIDIA GPUs, Vulkan as fallback
llama-cpp-sys-2 = { version = "0.1.79", features = ["vulkan"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux: Vulkan for broad compatibility
llama-cpp-sys-2 = { version = "0.1.79", features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS: Metal for Apple Silicon
llama-cpp-sys-2 = { version = "0.1.79", features = ["metal"] }

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
