[package]
name = "kivixa_audio"
version = "0.1.0"
edition = "2021"
description = "Native Rust audio intelligence engine for Kivixa - STT, TTS, and semantic audio indexing"
authors = ["990aa"]
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lib]
name = "kivixa_audio"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge for Dart interop
flutter_rust_bridge = "=2.11.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Audio processing
hound = "3.5"          # WAV file handling
rubato = "0.16"        # High-quality resampling
dasp_sample = "0.11"   # Audio sample type conversions

# Phonemization for TTS (lightweight)
regex = "1.10"
unicode-normalization = "0.1"

# Math operations for audio processing
ndarray = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and parallelism
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
rayon = "1.10"

# Thread-safe primitives
parking_lot = "0.12"
once_cell = "1.19"
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"

# System info
num_cpus = "1.16"

# Random for audio processing
rand = "0.8"

# Byte order handling for audio
byteorder = "1.5"

[dev-dependencies]
tempfile = "3.10"
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
