[package]
name = "rust_lib_kivixa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
kivixa_native = { path = "../native" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units
strip = true        # Automatically strip symbols from the binary
panic = "abort"     # Remove panic unwinding formatting